Correction du centrage du loader avec le responsive (overflow hidden à cause des transitions sur les pages restaurants)

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -591,6 +591,7 @@ footer ul i {
   gap: 2.5rem;
   margin-top: -3.75rem;
   padding-bottom: 2.5rem;
+  overflow: hidden;
 }
 @media only screen and (min-width: 768px) {
   .menu {
@@ -610,7 +611,7 @@ footer ul i {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 0 0px 1rem;
+  padding: 2rem 0 0 1rem;
   border-radius: 25px 25px 0 0;
   position: relative;
   background-color: #f6f6f6;
@@ -672,10 +673,12 @@ footer ul i {
 
 @keyframes slide-in {
   0% {
-    transform: translateX(600%);
+    transform: translateX(100%);
+    opacity: 0;
   }
   100% {
     transform: translateX(0);
+    opacity: 1;
   }
 }
 .course {
