--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -6,6 +6,7 @@
   gap: 2.5rem;
   margin-top: -3.75rem;
   padding-bottom: 2.5rem;
+  overflow: hidden;
 
   @include tablet {
     width: 80%;
@@ -23,7 +24,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 0 0px 1rem;
+  padding: 2rem 0 0 1rem;
   border-radius: 25px 25px 0 0;
   position: relative;
   background-color: $background-grey;
@@ -83,11 +84,13 @@ $slide-in-duration: 1000ms;
 
 @keyframes slide-in {
   0% {
-    transform: translateX(600%);
+    transform: translateX(100%);
+    opacity: 0;
   }
 
   100% {
     transform: translateX(0);
+    opacity: 1;
   }
 }
 
